WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283746
Intermittent timeout with media/media-rvfc-paused-webm.html
https://bugs.webkit.org/show_bug.cgi?id=283746
Summary
Intermittent timeout with media/media-rvfc-paused-webm.html
Jean-Yves Avenard [:jya]
Reported
2024-11-27 00:56:56 PST
Hard to reproduce, but will occur about 1 in 100 runs. Can be seen regularly with running the command: `run-webkit-test --no-build --debug --no-retry --iterations=200 --exit-after-n-crashes-or-timeouts=1 --exit-after-n-failures=1 --show-window media/media-rvfc-paused-webm.html`
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-27 00:57:16 PST
<
rdar://problem/140612348
>
Jean-Yves Avenard [:jya]
Comment 2
2024-11-27 02:35:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37186
EWS
Comment 3
2024-11-27 06:39:17 PST
Committed
287121@main
(56bdb2ff4251): <
https://commits.webkit.org/287121@main
> Reviewed commits have been landed. Closing PR #37186 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug